chore: Fix vertical alignment of header icons

--- a/src/components/GlobalHeader.module.scss
+++ b/src/components/GlobalHeader.module.scss
@@ -104,3 +104,7 @@
   display: flex;
   align-items: center;
 }
+
+.icon {
+  display: block;
+}
